(bug 62689) tipsy 'w'est gravity adds a visible dot 9999 pixels down the browser window
Turns out just empty content works too, the :after stuff shows up just fine

Bug: 62689

--- a/modules/base/styles/mixins/arrow.less
+++ b/modules/base/styles/mixins/arrow.less
@@ -22,8 +22,7 @@
 		left: calc(-@arrow-size + @arrow-border-size);
 		top: calc(@arrow-border-size);
 
-		// :after should have some content in order to show up
-		content: '.';
-		text-indent: -9999px;
+		// :after should have some content in order to show up - empty is fine
+		content: '';
 	}
 }
